packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/Agent_Decision__c.object-meta.xml
<CustomObject>
    <label>Agent Decision</label>
    <pluralLabel>Agent Decisions</pluralLabel>
    <nameField>
        <label>Decision Number</label>
        <displayFormat>AD-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Each decision the agent made: proposal, question, phase transition, observation, or error.</description>
</CustomObject>