packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Agent_Thread__c.field-meta.xml
<CustomField>
    <fullName>Agent_Thread__c</fullName>
    <label>Agent Thread</label>
    <type>MasterDetail</type>
    <referenceTo>Agent_Thread__c</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
</CustomField>