packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propose_Action</fullName>
                <default>true</default>
                <label>Propose Action</label>
            </value>
            <value>
                <fullName>Ask_User</fullName>
                <label>Ask User</label>
            </value>
            <value>
                <fullName>Advance_Phase</fullName>
                <label>Advance Phase</label>
            </value>
            <value>
                <fullName>Observe</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>