packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Phase_Key__c.field-meta.xml
<CustomField>
    <fullName>Phase_Key__c</fullName>
    <label>Phase Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>