packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Proposal_JSON__c.field-meta.xml
<CustomField>
    <fullName>Proposal_JSON__c</fullName>
    <label>Proposal JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>