packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Question_JSON__c.field-meta.xml
<CustomField>
    <fullName>Question_JSON__c</fullName>
    <label>Question JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>