packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>