packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Related_Action__c.field-meta.xml
<CustomField>
    <fullName>Related_Action__c</fullName>
    <label>Related Action</label>
    <type>Lookup</type>
    <referenceTo>Workflow_Action__c</referenceTo>
    <relationshipLabel>Agent Decisions</relationshipLabel>
    <relationshipName>Agent_Decisions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>