packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending_User</fullName>
                <default>true</default>
                <label>Pending User</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Refined</fullName>
            </value>
            <value>
                <fullName>Auto_Executed</fullName>
                <label>Auto Executed</label>
            </value>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>