packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/User_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>User_Response_JSON__c</fullName>
    <label>User Response JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>