packages/pulse-core/force-app/main/default/objects/Agent_Decision__c/fields/Workflow_Instance__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Instance__c</fullName>
    <label>Workflow Instance</label>
    <type>Lookup</type>
    <referenceTo>Workflow_Instance__c</referenceTo>
    <relationshipLabel>Agent Decisions</relationshipLabel>
    <relationshipName>Agent_Decisions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>